# mapz

./: .coveragerc  .travis.yml  README.md  pyproject.toml  setup.cfg  test.sh
.github/actions/setup/: action.yml
.github/workflows/: build.yaml
docs/: conf.py  index.rst
docs/pages/: attributions.rst  guide.rst
docs/pages/reference/: index.rst  mapz.rst
docs/pages/reference/methods/: index.rst  map.rst  traverse.rst
docs/pages/reference/modifiers/: index.rst
mapz/: __init__.py  base.py  mapz.py  methods.py  modificators.py  table.py
mapz/methods/: __init__.py  apply.py  clone.py  copy.py  get.py  getsert.py  map.py  merge.py  overwrite.py  put.py  set.py  splitkey.py  traverse.py  update.py
mapz/modifiers/: __init__.py  case.py  flatten.py  mapping.py  table.py
mapz/tests/: __init__.py  debug.py  test_get.py  test_mapz.py
mapz/tests/methods/: test_apply.py  test_clone.py  test_copy.py  test_get.py  test_getsert.py  test_map.py  test_merge.py  test_overwrite.py  test_put.py  test_set.py  test_splitkey.py  test_traverse.py  test_update.py
mapz/tests/modifiers/: test_case.py  test_flatten.py  test_mapping.py  test_table.py
