[tool.poetry]
name = "mapz"
version = "0.4.0"
description = "Extension of dict features"
authors = ["vduseev <vagiz@duseev.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
radon = "^4.3.2"
black = "^20.8b1"
ipython = "^7.19.0"
flake8 = "^3.8.4"
pytest = "^6.1.2"
mypy = "^0.790"
pytest-cov = "^2.10.1"
debugpy = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
