[tool.poetry]
name = "mapz"
version = "1.1.0"
description = "Extension of dict features"
authors = ["vduseev <vagiz@duseev.com>"]
maintainers = ["vduseev <vagiz@duseev.com>"]
license = "MIT"
keywords = ["map", "dict", "mapping", "interface"]
readme = "README.md"
homepage = "https://github.com/ilexconf/mapz"
repository = "https://github.com/ilexconf/mapz"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
radon = "^4.3.2"
black = "^20.8b1"
ipython = "^7.19.0"
flake8 = "^3.8.4"
pytest = "^6.1.2"
mypy = "^0.790"
debugpy = "^1.1.0"
flake8-import-order = "^0.18.1"
flake8-comprehensions = "^3.3.0"
flake8-builtins = "^1.5.3"
flake8-polyfill = "^1.0.2"
flake8-docstrings = "^1.5.0"
flake8-bugbear = "^20.11.1"
pytest-black = "^0.3.12"
pytest-mypy = "^0.8.0"
pytest-cov = "^2.10.1"
pytest-flake8 = "^1.0.6"

[tool.black]
line-length = 78

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
